# crossposter

./: .envrc  .gitignore  README.md  flake.nix  requirements.txt  run.sh  run_bot.sh  run_server.sh  shell.nix
bot/: __main__.py  package-bin.nix  package-lib.nix  package.nix  pyproject.toml
poster/: __init__.py  bluesky.py  chain.py  github.py  mastodon.py  (+5 more)
rc/: README.md  package-bin.nix  package-lib.nix  pyproject.toml
rc/src/rc/: .gitignore  __init__.py  auth.py  drafts.py  file_upload.py  folder_to_tsv.sh  markdown.py  sync_logs.py  web.py
rc/src/rc/templates/: base.html.j2  dashboard.html.j2  index.html.j2  login.html.j2  render.html.j2
rc/src/rc/templates/drafts/: dir.html.j2  file.html.j2
rc/web/: eslint.config.js  package.json  package.nix  pnpm-lock.yaml  vite.config.ts
rc/web/src/: base.css  colors.css  dims.css
rc/web/src/Composer/: Composer.module.css  Composer.tsx  ComposerContext.tsx  PostButton.tsx  Toggle.tsx  drafts.ts  fileUpload.ts  index.css  renderer.ts
rc/web/src/Composer/Drafts/: Draft.tsx  DraftList.module.css  DraftList.tsx  ReloadDraftButton.tsx  SaveDraftButton.tsx
rc/web/src/Composer/Editor/: Editor.module.css  Preview.module.css  Preview.tsx
rc/web/src/Composer/Editor/Tags/: Tag.tsx
rc/web/src/Dashboard/: ClearFilterChip.module.css  ClearFilterChip.tsx  Dashboard.tsx  HitsPerStringKey.tsx  PagingControls.tsx  createPagingControls.tsx  duckdb.ts
rc/web/src/Dashboard/charts/: DateBarChart.tsx
rc/web/src/Render/: index.css
rc/web/src/components/: Button.module.css  TextArea.tsx  TextInput.tsx
rc/web/src/components/FileInput/: FileInputArea.module.css  FileInputArea.tsx  FileInputButton.tsx
(+137 files in other folders)
