[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rc"
version = "0.1.0"
dependencies = [
  "PyJWT",
  "aiofiles",
  "boto3",
  "sanic[ext]",
  "pyarrow",
  "tzdata",
  "poster @ {root:parent:uri}/poster",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "src/rc/*.py",
  "src/rc/*.sh",
  "src/rc/templates/*",
]
# exclude = [
#   "bin/*",
#   "web/*",
#   "*.nix",
# ]

[tool.hatch.build.targets.wheel]
packages = [ "src/rc" ]
