[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rc"
version = "0.1.1"
dependencies = [
  "PyJWT",
  "aiofiles",
  "boto3",
  "sanic[ext]",
  "pyarrow",
  "tzdata",
  "poster @ {root:parent:uri}/poster",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "src/rc/*.py",
  "src/rc/*.sh",
  "src/rc/templates/*",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/rc" ]
